@@ -11,8 +11,11 @@ iRedMail-0.9.5:
           Reference: https://wiki.debian.org/DebianOldStable
 
     * Improvements:
+        + Enable OpenLDAP overlay 'pw-sha2' to support password verification
+          with sha2 algorithms.
         + Use Dovecot LMTP service as default LDA for better performance.
-        + SOGo is configured to store password in SSHA512 (instead of ssha) hash by default.
+        + SOGo is configured to store password in SSHA512 (instead of ssha)
+          hash by default.
         + Switch OpenLDAP backend to mdb (Memory-Mapped DB backend to slapd)
           on Linux and FreeBSD (not available on OpenBSD yet).
         + Switch SOGo to 3.x from 2.x on Linux distributions. It relies on
